--- a/gb/20/2/22/n11887894.md
+++ b/gb/20/2/22/n11887894.md
@@ -1,38 +1,37 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/dwfgyx2217/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dwfgyx2217/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【十字路口】病毒攻进中南海？中共或瞒新疫情</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/15f5b70fc17d798f_ttl7dayEhy_20200222-__-DJY-600x400.jpg" />
 <h6>海外中国感染者 2/3不知去向；新冠病毒是人工合成？监狱沦陷，逾500人染疫。（大纪元合成）
 </h6>
 <hr>
-<p>【大纪元2020年02月22日讯】【解读】<br />
-<strong>⊙Opening</strong></p>
-<p>大家好，我是唐浩，今天都好吗？</p>
+<p>【大纪元2020年02月22日讯】大家好，我是唐浩，今天都好吗？</p>
+<p><strong>⊙Opening</strong></p>
 <p>今天我们要继续跟大家聊肺炎疫情的话题，主要有几个重点：</p>
-<p>?重点一：病毒攻进<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%97%E6%B5%B7.md">中南海</a>？北京辟谣疑点多<br />
-?重点二：<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%9B%91%E7%8B%B1.md">中国监狱</a>爆发严重疫情 实际规模或更大<br />
-?重点三：<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E6%96%B0%E5%86%A0%E7%97%85%E6%AF%92.md">新冠病毒</a>是<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E4%BA%BA%E5%B7%A5%E5%90%88%E6%88%90.md">人工合成</a>的病毒吗？</p>
+<p>?重点一：病毒攻进<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%97%E6%B5%B7.md#1">中南海</a>？北京辟谣疑点多<br />
+?重点二：<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%9B%91%E7%8B%B1.md#1">中国监狱</a>爆发严重疫情 实际规模或更大<br />
+?重点三：<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%B0%E5%86%A0%E7%97%85%E6%AF%92.md#1">新冠病毒</a>是<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%BA%BA%E5%B7%A5%E5%90%88%E6%88%90.md#1">人工合成</a>的病毒吗？</p>
 <p>不过，首先要代表我们团队向大家表达感谢，最近一直有很多网友主动捐款赞助我们，当我们的“爱心股东”，让我们相当感动，在此谢谢大家。</p>
 <p>其实，我们从来没跟大家提到过，在我们的首页上方有个捐款机制，但是很多朋友就主动捐款给我们，对我们表达鼓励与支持。</p>
-<p style="text-align: center;"><a src=""></a><a href="https://git.io/Jv0CG"><img width="600" src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://git.io/JesJV">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/gi-QrZLCFvo" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p style="text-align: center;"><a src=""></a><a href="https://git.io/Jv0CG"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/gi-QrZLCFvo" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <p><strong>⊙Comment</strong></p>
 <p>比方说，有个网友说，“唐浩很低调地把捐款网址放在资讯栏，请大家多帮忙，团结力量大，希望能越做越好。”另一位网友说，“我决定捐钱支持唐浩团队，谢谢你们团队的努力。”</p>
-<p>还有其他网友在捐款平台上留言说，“支持你不畏强权，敢说真相的精神，加油！”“衷心感谢你和你的团队为我们带来精心制作的新闻及评论。”“很用心的节目，不错的思路及观点，受益良多。”</p>
+<p>还有其他网友是在捐款平台上留言说，“支持你不畏强权，敢说真相的精神，加油！”“衷心感谢你和你的团队为我们带来精心制作的新闻及评论。”“很用心的节目，不错的思路及观点，受益良多。”</p>
 <p>“非常感谢唐浩先生的报导及团队的用心，让希望的星火能够持续萌芽，在黎明前的夜晚是最黑暗的，所以才让这微弱的星火显得耀眼，直到黎明的到来。”</p>
 <p>这只是其中一部分的留言，不过，大多数捐款的朋友都是匿名捐赠，也没有留言。还有一些朋友是私下写信到我们邮箱来，我们就不便公开了。但是，对于每一位支持我们的朋友，不论有没有捐款，我们都表达由衷的感谢，谢谢你们愿意当我们的“爱心股东”或者是“正义合伙人”吧。我们团队也会努力做好未来的每一集节目，继续坚守普世价值与传统文化。谢谢大家！</p>
 <p>说完了感谢，接下来要跟各位说声抱歉。抱歉什么呢？因为，大家可能很难在我们节目里，看到太惊人、或者太耸动的视频画面。</p>
 <p>比方说，重庆发生一名老人因为封城，无法出门见到外孙，从而激动地想要跳楼寻短，很遗憾的是，这位老先生最后真的寻短了。网络上现在到处传播着这些视频，但很抱歉，我们不会播给大家看。</p>
 <p>因为，这不只是新闻专业和新闻道德的考量，更重要的是人性和同理心的考量。想想看，如果老先生是我们自己的亲人，我们会有什么感受？我们还会去网络上传播吗？</p>
 <p>古代的《礼记》里面，也提到过“里有殡，不巷歌”，讲的就是同理心和恻隐之心。虽然这位老先生和他的家人不是我们的邻居，但是将心比心，我们可能也不该拿人家的悲痛，来当作网络寻奇或者刺激点击量牟利。这一点，我们还请大家见谅。</p>
-<h2>?从中国前往海外的感染者 2/3未被发现</h2>
+<h2>?从中国前往海外感染者 2/3未被发现</h2>
 <p>好，再带大家看一个重要消息。</p>
 <p>英国伦敦帝国理工学院的MRC全球传染病分析中心（MRC Centre for Global Infectious Disease Analysis），21日发布一项最新研究，他们通过数据分析发现，目前肺炎疫情已经在中国以外的29个国家与地区蔓延，但是他们推算，目前从中国移动到海外的感染者，可能有高达2/3的人数还没有被发现到或监测到。</p>
 <p>这些从中国前往海外的感染者之所以没被监测到，可能跟感染者的症状轻重、有没有发病等等因素有关。</p>
 <p>特别是我们知道，现在病毒不但隐匿性相当高，有的病毒甚至只躲藏在病患的粪便里。而且现在更传出，河南有病患体内的病毒潜伏长达94天，整整超过三个月后，才确诊感染。</p>
 <p>因此，MRC的研究也提醒，2/3从中国前往海外的感染者还没被发现，可能会造成海外人传人的疫情继续扩大。这一点，也请各位世界各地的朋友要留意。</p>
 <p>好，接下来我们来看今天要聊的重点话题。</p>
-<h2>?重点一：病毒攻进<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%97%E6%B5%B7.md">中南海</a>？习称拐点未到 疑点多</h2>
+<h2>?重点一：病毒攻进<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%97%E6%B5%B7.md#1">中南海</a>？习称拐点未到疑点多</h2>
 <p>昨天（20日），我们跟大家提到过，北京西城区政府传出肺炎疫情，官方说法是一人确诊，69人隔离。然而，稍后当天也传出，北京市当局召开会议，准备将防疫级别升级到武汉的级别，消息传出后，引发热烈讨论。</p>
 <p>有人传出北京市委书记蔡奇也已经自我隔离，甚至有人说习近平也被蔡奇传染了，各种风声沸沸扬扬，也引发各界关注中南海政局。</p>
 <p>甚至有人嘲讽说，“听说就算你们中南海全灭了，从秦城监狱里马上能拉套（领导）班子出来？”大家知道，秦城监狱关了一堆高级别的中共贪官，包括周永康、薄熙来等等“大老虎”都在里头。说白了，这是嘲讽中共监狱里还关着一批贪腐的“影子内阁”。</p>
@@ -41,11 +40,11 @@
 <p>但是，北京领导人补上一句“全国疫情拐点尚未到来”，似乎意味着当局也知道疫情状况并不如官方宣称的乐观，可能还有变数，因此留下这一句话作为伏笔，也作为未来政治回旋的余地。</p>
 <p>第二，北京领导人在中央政治局会议上说出“全国疫情拐点尚未到来”，并且通过官媒放风出来，是不是意味着当局也知道，官方宣称的疫情状况与民间实际感受落差太大？所以特意加上这句话，避免招来更多“不知民间疾苦”的批评与民怨反弹？</p>
 <p>第三，官方近日来一直宣称“疫情防控有效”，催促各地尽快复工、恢复生产，还要求民众尽快返工上班。但是，北京坦言“疫情拐点尚未到来”，是不是意味着各地的疫情状况还有风险？在这种风险之下，为什么还要赶着人民、催促人民复工上班？</p>
-<p>中共官员：“担心会感染<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E6%96%B0%E5%86%A0%E7%97%85%E6%AF%92.md">新冠病毒</a>，不肯来上班的员工，主动劝导职工及时返岗。对经劝导无效，或以其他非正常理由拒绝返岗的，企业可以依法予以处理。”</p>
+<p>中共官员：“担心会感染<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%B0%E5%86%A0%E7%97%85%E6%AF%92.md#1">新冠病毒</a>，不肯来上班的员工，主动劝导职工及时返岗。对经劝导无效，或以其他非正常理由拒绝返岗的，企业可以依法予以处理。”</p>
 <p>说白了，这不是拿着亿万人民的性命在冒险博奕吗？这不是在用亿万家庭的幸福来换取中共手里的“血汗GDP”吗？这不是中共在草菅人命吗？</p>
-<p>更何况首都北京都还在封城，疫情还在扩大，防疫级别都要升级到武汉等级了，而且2003年用来收治SARS病患的小汤山医院，现在也已经启动扩建工程了，这代表什么？代表北京疫情还在步步升温，那么其它城市就能一切平安吗？会不会也有各级官员瞒报疫情、粉饰太平呢？</p>
+<p>更何况首都北京都还在封城，疫情还在扩大，防疫级别都要升级到武汉等级了，而且2003年用来收治SARS病患的小汤山医院，现在也已经启动扩建工程了，这代表什么？代表北京疫情还在步步升温，那么其他城市就能一切平安吗？会不会也有各级官员瞒报疫情、粉饰太平呢？</p>
 <p>简单一句话，中共执政70年来，始终没有改变牺牲人民、换取党国利益的极权思维。这种草率的“大跃进”式蛮干，很可能会再引发新一轮的疫情高峰。</p>
-<h2>?重点二：<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%9B%91%E7%8B%B1.md">中国监狱</a>爆发严重疫情 实际规模或更大</h2>
+<h2>?重点二：<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%9B%91%E7%8B%B1.md#1">中国监狱</a>爆发严重疫情 实际规模或更大</h2>
 <p>21日，湖北、山东、浙江三个省的五个监狱传出爆发严重疫情，累计超过500人确诊感染病毒。</p>
 <p>这么庞大的人群感染病毒，中共的处置手段是开除官员，包括多个监狱的监狱长被免职，还有山东省司法厅长等官员也都被免职。</p>
 <p>然而，你相信这么庞大的感染人群，会在一夜之间突然冒出来吗？肯定不会。一定是经过一定时间的累积与掩盖，实在扛不住了，才不得不公开出来。</p>
@@ -60,12 +59,12 @@
 <p>不过，值得一提的是，不少网友发现，最近网络上的中共网军、五毛似乎明显减少，才发现可能跟监狱爆发疫情有关。</p>
 <p>你没听错，中共在监狱里开培训班，把死刑犯与囚犯培养成“网络评论员”，负责在网络上跟帖称赞中共，或者谩骂、攻击任何不利于中共的言论。</p>
 <p>所以，相信很多海外网友就能明白，为什么五毛、网军讲话都那么的……，嗯，你懂的。</p>
-<h2>?重点三：新冠病毒是<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E4%BA%BA%E5%B7%A5%E5%90%88%E6%88%90.md">人工合成</a>的病毒吗？</h2>
+<h2>?重点三：新冠病毒是<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%BA%BA%E5%B7%A5%E5%90%88%E6%88%90.md#1">人工合成</a>的病毒吗？</h2>
 <p>这次肺炎的病毒究竟是来自自然界的“天然病毒”，还是经过“人工改造”？一直是科学界争论不休的重点。</p>
 <p>近日有消息传出说，俄罗斯卫生部公告称，新冠肺炎病毒是“人工合成病毒”，引发热烈讨论，甚至被部分媒体说是“全球首例官方认证”，当然中共官方对此再次否认。</p>
 <p>不过，21日，俄罗斯驻华使馆与俄罗斯官媒发表声明表示，这项说法是“谣言”。声明中强调，俄罗斯卫生部的公告内容，准确的中文翻译是“怀疑新型冠状病毒是蝙蝠冠状病毒与未知来源的冠状病毒的重组病毒”。</p>
 <p>关键字是“重组病毒”，而非“人工合成”病毒。这有什么差别呢？我请教了医学专家，最简单的说法就是，重组描述的是一种“过程”和“状态”，也就是说新冠病毒是不同的病毒经过组合而成的，但是造成重组的原因有可能是“天然的”，也可能是“人工的”。也就是说，俄罗斯当局的文件，只是描述病毒是“重组过的病毒”，但没有说病毒到底是不是人工合成的。</p>
-<p>俄罗斯政府这个声明，又让“病毒是否经过人工干预”的核心问题，回到了原点、科学界继续各执一词的局面。</p>
+<p>俄罗斯政府这个声明，又让“病毒是否经过人工干预”的核心问题，又回到了原点，科学界继续各执一词的局面。</p>
 <p>另外，还有一个核心问题也是到现在悬而未解的，就是病毒的来源究竟是哪里？是纯粹来自野生动物？还是武汉病毒研究所的实验室外泄的？而且，如果是实验室外泄的，那么又是“意外外泄”还是“刻意外泄”？</p>
 <p>我们重复一次，目前关于新冠病毒的核心焦点争议，包括了：</p>
 <p>一， 病毒是否经过人工干预？<br />
@@ -82,47 +81,49 @@
 大疫茫茫赤党慌<br />
 江山霾黯失正气<br />
 复兴中原待神光</p>
-<p>大纪元《<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E5%8D%81%E5%AD%97%E8%B7%AF%E5%8F%A3.md">世界十字路口</a>》制作组</p>
-<p>责任编辑：李昊 #</p>
+<p>大纪元《<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E5%8D%81%E5%AD%97%E8%B7%AF%E5%8F%A3.md#1">世界十字路口</a>》制作组</p>
+<p>责任编辑：李昊</p>
 
 <hr>
-
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/22/n11887894.htm">【十字路口】病毒攻进中南海？中共或瞒新疫情</a>
-
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/19/3/6/n11092642.htm">仅两成国际生考上大学 英语为主因</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/2/27/n11077059.htm">非欧盟学生留学法国 本科和硕士注册费大涨</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/2/23/n11065493.htm">留美新生人数下滑 中国学生依然最多</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/1/28/n11007024.htm">留学生英语水平引忧 维州州长干预</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/1/16/n10979334.htm">为延长在澳逗留时间 近20万留学生转换签证</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/1/9/n10962420.htm">研究：6成留学生通过中介在加拿大上学</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/12/30/n10941031.htm">忧千人计划？麻省理工传拒收中国高中生</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/11/26/n10875639.htm">多伦多麦克肯立高中 - 通往主流社会精英之路</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864598.htm">胎记是契约？再续前世缘</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/13/n11866471.htm">【三国英雄13】官渡之战曹操获胜的秘密</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881049.htm">【新闻看点】疫情严峻3方甩锅 川普为习说好话</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883841.htm">【新闻看点】中共驱逐美3记者 真正原因不说</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881404.htm">北京西城成疫情重灾区 财政部员工住宅楼染疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880959.htm">当官的吃不完 贵州援助鄂州蔬菜烂在仓库</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879605.htm">【翻墙必看】分析：中国粮食危机再浮出水面</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883801.htm">古天乐全球搜130万?罩 四类人获优先赠予</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878231.htm">新冠病毒假阴性或有4大原因 会带来何风险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879107.htm">钻石公主号隔离仍爆高感染率 医师揭4大原因</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883959.htm">刘真惊传叶克膜抢救 主动脉瓣狭窄有多危险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11881805.htm">搭飞机和计程车留意这些事 降传染风险</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dwfgyx2217/djy/blob/master/gb/20/2/22/n11887894.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dwfgyx2217/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dwfgyx2217/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/21/n11884891.md#1">【十字路口】赚钱胜人命 中共急复工隐瞒疫情</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/19/n11878972.md#1">【十字路口】武汉医生揭疫情内幕 公安也倒地</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11876508.md#1">【十字路口】武汉方舱病人破墙逃跑 中南海内斗</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/17/n11874523.md#1">【十字路口】专访苏紫云：中共军力能抗美？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/15/n11870405.md#1">【十字路口】50万人感染病毒？武汉如戒严</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/14/n11867660.md#1">【十字路口】病毒引官场大地震 疫情为何狂飙？</a></li>
+<hr>
+
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/9/n10131106.md#1" target="_blank">林辉：北京四中老师们健忘背后的残酷真相</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/12/24/n4042174.md#1" target="_blank">大陆民间这些惊人预言都指向同一件大事</a></li><hr>
+
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11941108.md#1">【现场视频】黄冈蕲春刚刚解封 多处又封了</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11941306.md#1">中共疯狂封杀 “发哨的人”52版本复活</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940988.md#1">【最新疫情3.15】美确诊3244例 美联储再降息</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11941179.md#1">【翻墙必看】湖北2岁幼儿活活饿死 尸体已臭</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940920.md#1">荷兰科学家首发现武汉病毒抗体 药物快过疫苗</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940024.md#1">“郑州毒王”隐瞒旅游史 恐影响全球近4万人</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11939689.md#1">报导李文亮造谣获表彰 新华社女记者被起底</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11939240.md#1">【拍案惊奇】美军带毒到武汉？中共假话遭批</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/19/n11805341.md#1">【思想领袖】史帕丁：中共寄生式经济 川普反制</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940830.md#1">【一线采访视频版】：医院人满为患 求医无门</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934974.md#1">西班牙有狮子逛大街？ 原来是小狗冒充的</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938952.md#1">疫情下范冰冰晒自拍 出门戴双层口罩引围观</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938685.md#1">梁朝伟赴澳洲拍漫威片《上气》剧组全面停工</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936606.md#1">汤姆·汉克斯染疫 刘嘉玲忧伟仔澳洲拍戏状况</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940426.md#1">《钢铁勋章》影评：迟来的荣誉 同样令人动容</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/22/n11887894.htm">【十字路口】病毒攻进中南海？中共或瞒新疫情</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/2/22/n11887894.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
