--- a/gb/20/3/14/n11940988.md
+++ b/gb/20/3/14/n11940988.md
@@ -400,8 +400,8 @@ American mountain resorts beginning March 15 through March 22. Please read this 
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/28/n11903736.md#1">应对新冠病毒来袭 八方面教你做好准备</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/13/n10479888.md#1" target="_blank">王锐：“儿童政治犯”的故事</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/1/n11424700.md#1" target="_blank">罗兰：中共公安何以成公害</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/8/n9937008.md#1" target="_blank">陈益南：怵目惊心！1951年的“镇反”</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/6/n7526736.md#1" target="_blank">绝处逢生 令药学业同行目瞪口呆的神迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
