--- a/gb/11/6/17/n3289382.md
+++ b/gb/11/6/17/n3289382.md
@@ -188,45 +188,45 @@ http://mag.epochtimes.com/072/22-02.jpg</p>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/15/11/13/n4572777.md#1">加国华人吁总理APEC峰会提人权</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/15/10/8/n4545382.md#1">江苏省委书记罗志军访问加拿大 怕见媒体</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/12/11/8/n3725491.md#1">加拿大省议员：无人可容忍活摘器官</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/12/3/10/n3535886.md#1">加拿大总理：访华曾提法轮功人权问题</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/9/9/15/n2657096.md#1">加拿大人权巡回研讨会关注中国人权</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/9/5/8/n2519581.md#1">加外长访华前 国会议员促提人权问题</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/7/4/25/n1689589.md#1">加外长访华 中国人权问题受关注</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/4/4/10/n506415.md#1">法轮功提请加拿大在联合国人权委员会谴责中共对法轮功的迫害</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/3/3/14/n286350.md#1">加议员促总理联合国提案谴责中共迫害法轮功</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/2/11/26/n249546.md#1">加拿大在中加人权对话中特别提出法轮功</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/15/5/2/n4425577.md#1">【传奇时代】通往天安门的旅程</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/15/5/5/n4427221.md#1">法轮功学员美密西根大学炼功 民众学炼</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/15/4/30/n4423537.md#1">夏祷： 九十年之后的历史大潮</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/15/5/3/n4426179.md#1">组图：高雄法轮功学员 庆祝5.13法轮大法日</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/15/5/2/n4425188.md#1">九天剑：特赦钟声响起</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/15/4/11/n4409576.md#1">听了“法轮大法好” 玫瑰死而复活了</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/15/5/2/n4425653.md#1">台北庆祝世界法轮大法日 恭祝李洪志师父生日快乐</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/15/5/4/n4426202.md#1">大法日颂歌献师父</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/15/5/3/n4425752.md#1">藏头诗︰法轮大法好</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/15/5/3/n4425733.md#1">组图:南台湾纪念“4．25”  声援2亿勇士三退迎新生</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/2/4/n10114567.md#1">华府研讨会 聚焦《共产主义终极目的》与退党</a></li>
 <li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/3/19/n10229002.md#1">香港盛大集会游行 庆祝近三亿人退出中共</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/7/n10834918.md#1" target="_blank">曾伯炎：杀母红卫兵孔繁路的悲剧</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/15/n11385414.md#1" target="_blank">20年前 澳洲西人为法轮功赴京上访（下）</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10004515.md#1" target="_blank">揭秘“四一二反革命政变”的历史真相（下）</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/6/n11571997.md#1" target="_blank">他们为我们的生活带来光明（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942656.md#1">集中营？传武汉再建可容4千人新方舱医院</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
 <li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
 <li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940920.md#1">荷兰科学家首发现武汉病毒抗体 药物快过疫苗</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940024.md#1">“郑州毒王”隐瞒旅游史 恐影响全球近4万人</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11939304.md#1">武汉失踪青年达数百人 警方不作为（上）</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11939240.md#1">【拍案惊奇】美军带毒到武汉？中共假话遭批</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940830.md#1">【一线采访视频版】：医院人满为患 求医无门</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11941108.md#1">【现场视频】黄冈蕲春刚刚解封 多处又封了</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938952.md#1">疫情下范冰冰晒自拍 出门戴双层口罩引围观</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938685.md#1">梁朝伟赴澳洲拍漫威片《上气》剧组全面停工</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/11/6/17/n3289382.htm">探寻真相 兼听则明 ——法轮功小问答</a></p><hr>
